feat: complete performance management assignment stack